# MockSZ

./: .coveragerc  .gitignore  CITATION.cff  CMakeLists.txt  GenerateDocs.py  LICENSE  README.md  TODO.md  scattering_test.py  setup.py
.github/workflows/: python-app.yml
docs/: Backgrounds_8py.html  Bindings_8py.html  Constants_8h.html  Constants_8h_source.html  Constants_8py.html  Conversions_8h.html  Conversions_8h_source.html  Conversions_8py.html  ElectronDistributions_8py.html  InterfaceCPU_8cpp.html  InterfaceCPU_8h.html  InterfaceCPU_8h_source.html  Models_8py.html  MultiStats_8py.html  Romberg_8cpp.html  Romberg_8h.html  Romberg_8h_source.html  Signal_8cpp.html  Signal_8h.html  Signal_8h_source.html  SinglePointing_8py.html  SingleStats_8py.html  Stats_8cpp.html  Stats_8h.html  Stats_8h_source.html  Threadmgr_8py.html  Utils_8h.html  Utils_8h_source.html  Utils_8py.html  annotated.html  background.html  citelist.html  classMockSZ_1_1Backgrounds_1_1CMB-members.html  classMockSZ_1_1Backgrounds_1_1CMB.html  classMockSZ_1_1Constants_1_1Constants-members.html  classMockSZ_1_1Constants_1_1Constants.html  classMockSZ_1_1Models_1_1IsoBetaModel-members.html  classMockSZ_1_1Models_1_1IsoBetaModel.html  classMockSZ_1_1Models_1_1ScatteringKernels-members.html  classMockSZ_1_1Models_1_1ScatteringKernels.html  (+36 more)
docs/deepdives/: PerformanceInternal.html  Scatterings.html
docs/demos/: IsoBetaMaps.html  MultiElectronScattering.html  Scatterings.html  SingleElectronScattering.html  SinglePointing.html
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+8 more)
docs/tutorials/: IsoBetaMaps.html  SinglePointing.html
docs/validations/: ValidateBirkinshaw.html  ValidateSZpack.html
doxy/: Background.dox  DeepDives.dox  Documentation.dox  Doxyfile  DoxygenLayout.xml  PubAPIClusters.dox  PubAPIScatKern.dox  PubAPISingle.dox  Resources.dox  Tutorials.dox  mainpage.dox  refs.bib
etc/deepdives/: PerformanceInternal.ipynb  Scatterings.ipynb
etc/demos/: IsoBetaMaps.ipynb  MultiElectronScattering.ipynb  (+3 more)
paper/: paper.bib  paper.md
tests/: test_Backgrounds.py  test_Constants.py  test_Conversions.py  test_ElectronDistributions.py  test_Models.py  test_MultiStats.py  test_SinglePointing.py  test_SingleStats.py  test_Utils.py
(+28 files in other folders)
